--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,7 +2,8 @@ backend:
   name: git-gateway
   branch: main
 
-local_backend: true
+# Décommente pour développement local
+# local_backend: true
 
 media_folder: "public/images/uploads"
 public_folder: "/images/uploads"
